snowflake/test/corpus/copy_into.txt
================================================================================
COPY INTO table from stage
================================================================================

COPY INTO my_table FROM @my_stage;

--------------------------------------------------------------------------------

(program
  (statement
    (copy_into
      (keyword_copy)
      (keyword_into)
      (object_reference
        name: (identifier))
      (keyword_from)
      (stage_ref))))

================================================================================
COPY INTO stage from table
================================================================================

COPY INTO @my_stage FROM my_table;

--------------------------------------------------------------------------------

(program
  (statement
    (copy_into
      (keyword_copy)
      (keyword_into)
      (stage_ref)
      (keyword_from)
      (object_reference
        name: (identifier)))))

================================================================================
COPY INTO with FILE_FORMAT option
================================================================================

COPY INTO my_table FROM @my_stage FILE_FORMAT = (TYPE = 'CSV');

--------------------------------------------------------------------------------

(program
  (statement
    (copy_into
      (keyword_copy)
      (keyword_into)
      (object_reference
        name: (identifier))
      (keyword_from)
      (stage_ref)
      (copy_property
        (identifier)
        (copy_kv
          (identifier)
          (literal))))))
